tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f (x: Int) : () = 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_3.kk:1:23
  │
1 │ let f (x: Int) : () = 2
  │                       ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - ()          | + Int       |
    +---------------+-------------+
